--- a/Ahorcado/index.html
+++ b/Ahorcado/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <title> El Ahorcado </title>
     <link rel="stylesheet" href="Estilos.css">
+    <script src="guias/lista-palabras.js" defer></script>
+    <script src="guias/guia.js" defer></script>
 
 </head>
 <body>
@@ -12,30 +14,21 @@
         <!-- cajita contiene la imagen de perder  -->
         <div class="cajita">
             <!-- estas direcciones hay que cambiarlas porque sino no funcionarán las imagenes -->
-            <img src="C:\Users\PC\Desktop\Unimet\sistemas de info\Ahorcado\images\lost.gif" alt="gif tristico">
+            <img src="images/lost.gif" alt="gif tristico">
             <h4> Perdiste compa mimimimi</h4>
             <p>La palabra correcta era: <b>partido</b></p>
-            <button class="reiniciar">Reiniciar</button>
+            <boton class="reiniciar">Reiniciar</boton>
         </div>
     </div>
     <div class="contenedor">
     <!-- contenedor es el rectangulo blanco y todo lo que contiene -->
     <div class="cajaAhorcado"> <!-- cajaAhorcado es la imagen que se va "dibujando" -->
         <!-- estas direcciones hay que cambiarlas porque sino no funcionarán las imagenes -->
-        <img src="C:\Users\PC\Desktop\Unimet\sistemas de info\Ahorcado\images\hangman-0.svg" alt="imagen del ahorcado">
+        <img src="images/hangman-0.svg" alt="imagen del ahorcado">
     <h1>El Ahorcado</h1>
     </div> 
     <div class="game-box"> <!-- game-box contiene las letras, el contador de intentos, la pista y el teclado -->
-                <ul class="mostrar-palabra">
-                    <li class="letra"></li>
-                    <li class="letra acertada">b</li>
-                    <li class="letra"></li>
-                    <li class="letra"></li>
-                    <li class="letra"></li>
-                    <li class="letra"></li>
-                    <li class="letra"></li>
-                    
-                </ul>
+                <ul class="mostrar-palabra"></ul>
                 <h4 class="texto-pista">
                     Pista:
                     <b>Lorem ipsum bla bla laporta is the best</b>
@@ -44,15 +37,7 @@
                     Errores:
                     <b>0 / 6</b>
                 </h4>
-                <div class="teclado">
-                    <button>a</button><button>b</button><button>c</button><button>d</button>
-                    <button>e</button><button>f</button><button>g</button><button>h</button>
-                    <button>i</button><button>j</button><button>k</button><button>l</button>
-                    <button>m</button><button>n</button><button>o</button><button>p</button>
-                    <button>q</button><button>r</button><button>s</button><button>t</button>
-                    <button>u</button><button>v</button><button>w</button><button>x</button>
-                    <button>y</button><button>z</button>
-                </div>
+                <div class="teclado"></div>
             </div>
         </div>
 </body>
